--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:seed": "npx tsx prisma/seed.ts",
-    "db:reset": "prisma migrate reset --force && npm run db:seed",
+    "db:reset": "prisma migrate reset --force && prisma db push && npm run db:seed",
     "check-env": "node scripts/check-env.js"
   },
   "dependencies": {
